# keyshift

./: .gitmodules  LICENSE  Makefile  README.md  build.sh  build_all_and_test.sh  build_minimal.sh  evdev_echo.cpp  example.remap  input_device.h  new_device.cpp  remap_operator.cpp  remap_toy_example.cpp  send_keys.cpp  virtual_device.h
.github/workflows/: build-and-test.yml
docs/: building.md  configuration_language.md  goals.md  making_it_permanent.md  quick_start.md  remapping_needs.md
examples/: 65perc.keyshift
examples/systemd/: keyshift.service
examples/udev/: 50-keyshift.rules
src/: CMakeLists.txt  Makefile  argparse.cpp  argparse.h  config_parser.cpp  config_parser.h  config_parser_test.cpp  demo_send_keys.cpp  essentials.h  input_device.h  keyboard_remap.cpp  keycode_lookup.cpp  keycode_lookup.h  keyshift.cpp  os_level_mutex.cpp  profile.cpp  remap_operator.cpp  remap_operator.h  remap_operator_test.cpp  remapper.cpp  test_utils.h  version.h.in  virtual_device.h
src/utility/: argparse.cpp  argparse.h  argparse_test.cpp  essentials.h  essentials_test.cpp  every_n_ms.h  every_n_ms_demo.cpp  os_level_mutex.cpp  os_level_mutex.h
